# ibkr-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
src/ibkr_mcp/: __init__.py  __main__.py  cache.py  client.py  config.py  models.py  server.py  utils.py
src/ibkr_mcp/tools/: __init__.py  account.py  market.py  options.py  search.py  status.py
tests/: conftest.py  test_cache.py  test_client.py  test_models.py  test_tools.py  test_utils.py
