[project]
name = "ibkr-mcp"
version = "0.1.0"
description = "Read-only MCP server for Interactive Brokers Gateway (TWS API)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Mark Liu" }]
dependencies = [
    "fastmcp>=2.0.0",
    "ib_async>=1.0.0",
    "exchange_calendars>=4.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
ibkr-mcp = "ibkr_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
